<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/led_red"
            android:textAlignment="center"
            android:textColor="#eb7d7d" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/led_blue"
            android:textAlignment="center"
            android:textColor="#7db2eb" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/led_green"
            android:textAlignment="center"
            android:textColor="#7deb84" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/led_yellow"
            android:textAlignment="center"
            android:textColor="#ebe07d" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/led_ir"
            android:textAlignment="center"
            android:textColor="#c17deb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_red"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_blue"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_green"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_yellow"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText_ir"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal" />
    </LinearLayout>
</LinearLayout>